-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11.0.7, 15
-
Component/s: hotspot
-
b18
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8248697 | 13.0.5 | Denghui Dong | P4 | Resolved | Fixed | b01 |
| JDK-8247764 | 11.0.9 | Denghui Dong | P4 | Resolved | Fixed | b01 |
TestNativeLibrariesEvent failed in my Linux environment, here is a sample output of NativeLibraryEvent:
```
Event:jdk.NativeLibrary {
startTime = 17:44:26.758
name = "172153071"
baseAddress = 0x00400000
topAddress = 0x00401000
}
Event:jdk.NativeLibrary {
startTime = 17:44:26.758
name = "172153071"
baseAddress = 0x00600000
topAddress = 0x00601000
}
Event:jdk.NativeLibrary {
startTime = 17:44:26.758
name = "172153071"
baseAddress = 0x00601000
topAddress = 0x00602000
}
Event:jdk.NativeLibrary {
startTime = 17:44:26.758
name = "172153696"
baseAddress = 0x7FFB00000
topAddress = 0x7FFB50000
}
```
the name of NativeLibraryEvent is wrong.
```
Event:jdk.NativeLibrary {
startTime = 17:44:26.758
name = "172153071"
baseAddress = 0x00400000
topAddress = 0x00401000
}
Event:jdk.NativeLibrary {
startTime = 17:44:26.758
name = "172153071"
baseAddress = 0x00600000
topAddress = 0x00601000
}
Event:jdk.NativeLibrary {
startTime = 17:44:26.758
name = "172153071"
baseAddress = 0x00601000
topAddress = 0x00602000
}
Event:jdk.NativeLibrary {
startTime = 17:44:26.758
name = "172153696"
baseAddress = 0x7FFB00000
topAddress = 0x7FFB50000
}
```
the name of NativeLibraryEvent is wrong.
- backported by
-
JDK-8247764 NativeLibraryEvent has wrong library name on Linux
-
- Resolved
-
-
JDK-8248697 NativeLibraryEvent has wrong library name on Linux
-
- Resolved
-
- relates to
-
JDK-8235489 handle return values of sscanf calls in hotspot
-
- Resolved
-
-
JDK-8241439 jdk.NativeLibraryEvent hooks all opened regular files
-
- Resolved
-