8240360: NativeLibraryEvent has wrong library name on Linux

Reviewed-by: ysuenaga, clanger